--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "nifti-reader-js": "^0.8.0",
     "pako": "^2.1.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-select": "^5.10.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
